--- a/InnovateNSUT-master/package.json
+++ b/InnovateNSUT-master/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
+    "database-js": "^3.0.10",
     "ejs": "^3.1.6",
     "env": "0.0.2",
     "express": "^4.17.1",
