--- a/InnovateNSUT-master/package.json
+++ b/InnovateNSUT-master/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.19",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-encryption": "^2.0.3",
     "mongoose-findorcreate": "^3.0.0",
     "node-modules": "^0.0.1",
